--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.1",
-    "vite": "^5.4.20"
+    "vite": "^5.4.20",
+    "vite-plugin-pwa": "^0.21.2"
   },
   "type": "module",
   "dependencies": {
